biggie (not) smalls commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string.h": "c",
-        "triggerwordcontainer.h": "c"
+        "triggerwordcontainer.h": "c",
+        "stdlib.h": "c"
     }
 }
